--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
         run: |
           sudo apt-get install libvlc-dev
           sudo apt-get install libvlccore-dev
-          sudo apt-get install vlc-bin
+          sudo apt-get install glibc-source
+          sudo apt-get install libidn12
+          sudo apt-get install libidn-dev
           sudo apt-get install luajit
           haxelib setup ~/haxelib
           haxelib install hxcpp > /dev/null --quiet
